force-app/main/default/objects/Order_Line__c/Order_Line__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integration of Order records*** Mapped to M3 as Display Only fields</description>
    <label>Order Line</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>