force-app/main/default/objects/Order_Line__c/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>