force-app/main/default/objects/Order_Line__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Customer PO Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>