force-app/main/default/objects/Order_Line__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Item Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>