force-app/main/default/objects/Order_Line__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Line Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>