force-app/main/default/objects/Order_Line__c/fields/M3_Order__c.field-meta.xml
<CustomField>
    <fullName>M3_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>M3 Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>