force-app/main/default/objects/Order_Line__c/fields/M3_Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>M3_Order_Line_Number__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <externalId>true</externalId>
    <label>M3 Order Line Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>