force-app/main/default/objects/Order_Line__c/fields/Order_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Order Entry Date</label>
    <type>Date</type>
</CustomField>