force-app/main/default/objects/Order_Line__c/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Warehouse Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>